# timeclaim

./: Cargo.toml  LICENSE  index.html
.github/workflows/: ci.yml  deploy.yml
src/: btc.rs  claim.rs  error.rs  main.rs  qr.rs
src/components/: app.rs  mod.rs  new_claim.rs  validate.rs
