[package]
name = "timeclaim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
base64 = "0.21.0"
fast_qr = { version = "0.8.5", features = ["svg"] }
leptos = "0.2.5"
leptos_router = { version = "0.2.5", features = ["csr"] }
qrcode = "0.12.0"
reqwasm = "0.5.0"
serde = { version = "1.0.160", features = ["serde_derive", "derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
